Home page changed

--- a/mysite/client/templates/home.html
+++ b/mysite/client/templates/home.html
@@ -8,11 +8,11 @@
 		<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
 			<h2 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; position: relative; bottom: 40px; left: 50px;">This is our website which allows you to find youtube statistics</h2>
 			<h3 style="text-align: center; font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; position: relative; bottom: 20px; left: 20px; ">CS180 - Hackerman</h3>
-			<button style="background-color:#050000; position:relative; left: 350px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
+	<!---		<button style="background-color:#050000; position:relative; left: 350px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
          		Dataset</button value="Submit">
          	<button style="background-color:#050000; position:relative; left: 400px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
          		Github</button value="Submit">
-         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white; position: relative; bottom: 0px; left: 25px;">Technologies used</p>
+         	<p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white; position: relative; bottom: 0px; left: 25px;">Built with</p>
          	<figure>
          		<h4 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 1.0em; color: white; position: relative; bottom: -14px; left: 190px; text-decoration: underline;">Front-end</h4>
          		<h5 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.05em; color: white; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5>
@@ -35,6 +35,7 @@
          		<img src="https://img.icons8.com/material-two-tone/96/000000/django.png" style="position: relative; bottom: 630px; left: 880px;" />
          		<figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0em; position: relative; bottom: 605px; left: 890px; color: white;"> Django</figcaption>
          	</figure>
+    --->
          	<link href="{% static 'css/main.css' %}" rel="stylesheet">
          	<div class="bg"></div>
 			<div class="bg bg2"></div>
