--- a/mysite/client/templates/about.html
+++ b/mysite/client/templates/about.html
@@ -4,16 +4,47 @@
 
 {% block page_content %}
 	<div class='container' style="overflow: hidden;">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
       <body style="background-image: linear-gradient(to right, #445898 , #995A10);">
-         <h1 style="text-align: center; font-family: Palatino Linotype, Palatino, serif;">Team Members</h1>
+         <h1 style="position: relative; left: 900px; color: white; bottom: -91px; font-size: 190%"> Dataset </h1>
+         <button style="background-color:#050000; position:relative; left: 850px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: -90px;" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
+               Dataset</button value="Submit">
+            <h2 style="position: relative; left: 80px; color: white;"> Code </h2>
+            <button style="background-color:#050000; position:relative; left: 190px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; left: 20px;" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
+               Github</button value="Submit">
+            <p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white; position: relative; bottom: -20px; left: -10px;">Built with</p>
+            <figure>
+               <h4 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 1.0em; color: white; position: relative; bottom: -14px; left: 490px; text-decoration: underline;">Front-end</h4>
+               <h5 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.05em; color: white; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5> 
+            <i style="font-size: 600%; line-height: 1.5em; color: green; position: relative; bottom: -1px; left: 140px;" class="fab fa-bootstrap"></i>
+            <figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; color: white; position: relative; bottom: 0px; left: 135px;">Bootstrap</figcaption>
+            </figure> 
+            <figure>
+            <i style= "font-size: 600%; line-height: 1.5em; position: relative; bottom: 172px; left: 500px; color: orange;" class ="fab fa-html5"></i>
+              <figcaption style= "font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; position: relative; bottom: 172px; left: 477px; color: white;" >HTML5/CSS</figcaption>
+            </figure>
+         <figure>
+            <i style="font-size: 600%; line-height: 1.5em; position: relative; bottom: 345px; left: 800px; color: red;" class="fab fa-js"></i>
+              <figcaption style= "font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0em; position: relative; bottom: 337px; left: 795px; color: white;" >Javascript</figcaption>
+            </figure>
+      <!---      <figure>
+               <i style="font-size: 600%; line-height: 1.5em; position: relative; bottom: 500px; left: 630px; color: blue;" class="fab fa-python"></i>
+               <figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0em; position: relative; bottom: 495px; left: 632px; color: white;"> Python</figcaption>
+            </figure>
+            <figure>
+               <img src="https://img.icons8.com/material-two-tone/96/000000/django.png" style="position: relative; bottom: 630px; left: 880px;" />
+               <figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0em; position: relative; bottom: 605px; left: 890px; color: white;"> Django</figcaption>
+            </figure>   --->
+      <!---   <h1 style="text-align: center; font-family: Palatino Linotype, Palatino, serif; position: relative; bottom: 560px;">Team Members</h1> -->
          <div>
             <div class="person person-photos"> 
-               <img src="https://cdn.discordapp.com/attachments/768921039412396052/778859174854524928/IMG_20180812_193316_538.jpg" alt="Mountain" style="width:400px">
-               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 110px; line-height: 1.0em;">Alexander Ku</h2>
-               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: blue; position: relative; bottom: 10px; left: 150px; line-height: 1.0em;">Back-End</h4>
+               <img src="https://cdn.discordapp.com/attachments/768921039412396052/778859174854524928/IMG_20180812_193316_538.jpg" alt="Mountain" style="width:400px; position: relative; bottom: 0px;">
+               <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 110px; line-height: 1.0em; bottom: 5px;">Alexander Ku</h2>
+               <h4 style="font-family: Palatino Linotype, Palatino, serif; color: white; position: relative; bottom: 10px; left: 150px; line-height: 1.0em;">Back-End</h4>
                <button style="background-color:#050000; position:relative; left: 110px; bottom: 10px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none;" onclick="location.href='https://github.com/deadmemeconnoisseur42'" type="button"> <i class="fab fa-github-alt"></i>
                Github</button value="Submit">
             </div>
+            <!---
             <div class="person person-photos">
                 <img src="https://cdn.discordapp.com/attachments/761707638131523606/778811798206808064/https3A2F2Fspecials-images.png" alt="Mountain" style="width: 400px; position: relative; left: 635px; line-height: 1.0em; bottom: 465px;">
                 <h2 style="font-family: Palatino Linotype, Palatino, serif; font-size: 200%; position: relative; left: 720px; bottom: 470px;">Christain Campos</h2>
@@ -35,7 +66,7 @@
                <button style="background-color:#050000; position:relative; left: 680px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: 810px;" onclick="location.href='https://github.com/sfazli96?tab=repositories'" type="button"> <i class="fab fa-github-alt"></i>
                Github</button value="Submit">
             </div>
-            
+            --->
          </div>
 
 	</div>
