Fixing html responsive width pages

--- a/mysite/client/templates/about.html
+++ b/mysite/client/templates/about.html
@@ -4,18 +4,17 @@
 
 {% block page_content %}
 	<div class='container' style="overflow: hidden;">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
       <body style="background-image: linear-gradient(to right, #445898 , #995A10);">
-         <h1 style="position: relative; left: 900px; color: white; bottom: -91px; font-size: 190%"> Dataset </h1>
-         <button style="background-color:#050000; position:relative; left: 850px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: -90px;" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
+         <h1 style="left: 900px; color: white; position: relative; bottom: -90px; font-size: 190%" > Dataset </h1>
+         <button style="background-color:#050000; position:relative; left: 850px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; bottom: -90px; position: relative;" onclick="location.href='https://www.kaggle.com/datasnaek/youtube-new'" type="button">
                Dataset</button value="Submit">
             <h2 style="position: relative; left: 80px; color: white;"> Code </h2>
-            <button style="background-color:#050000; position:relative; left: 190px; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; left: 20px;" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
+            <button style="background-color:#050000; font-family: Palatino Linotype, Palatino, serif; color:white; width: 200px;height: 40px; border-radius: 28px; border: none; left: 20px;" onclick="location.href='https://github.com/ucr-cs180-fall20/cs180project-021-hackerman/tree/main'" type="button"> <i class="fab fa-github-alt"></i>
                Github</button value="Submit">
             <p style="text-align: center; font-size: 280%; font-family: Palatino Linotype, Palatino, serif;  line-height: 2em; color: white; position: relative; bottom: -20px; left: -10px;">Built with</p>
             <figure>
                <h4 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 1.0em; color: white; position: relative; bottom: -14px; left: 490px; text-decoration: underline;">Front-end</h4>
-               <h5 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.05em; color: white; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5> 
+      <!--         <h5 style="font-size: 158%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.05em; color: white; position: relative; bottom: 4.55px; left: 760px; text-decoration: underline;">Back-end</h5> --->
             <i style="font-size: 600%; line-height: 1.5em; color: green; position: relative; bottom: -1px; left: 140px;" class="fab fa-bootstrap"></i>
             <figcaption style="font-size: 150%; font-family: Palatino Linotype, Palatino, serif; color: white; line-height: 0.6em; color: white; position: relative; bottom: 0px; left: 135px;">Bootstrap</figcaption>
             </figure> 
