Adding responsive borders

--- a/mysite/client/templates/top20MostLiked.html
+++ b/mysite/client/templates/top20MostLiked.html
@@ -2,6 +2,10 @@
 
 {% block page_content %}
 	<div class='container'>
+		 <link href="{% static 'css/responsive_boarders.css' %}" rel="stylesheet">
+		<div id=one></div>
+		<div id=two></div>
+		<div id=three></div>
 		<body style="background-image: linear-gradient(to right, #445898 , #995A10);">
 		<h1 style="color: white;">Top 20 Most Liked Videos</h1>
 		<!-- CHARTS GO HERE -->
