Updated average views/likes/dislikes page to display all countries

--- a/mysite/client/templates/avgPerCat.html
+++ b/mysite/client/templates/avgPerCat.html
@@ -2,7 +2,7 @@
 
 {% block page_content %}
 	<div class='container'>
-		<h1>Average likes/dislikes/views per category in the USA.</h1>
+		<h1>Average likes/dislikes/views per category across USA, Great Britain, Germany, and Canada.</h1>
 		<!-- CHARTS GO HERE -->
 		{% autoescape off %}
 		{{likes_div}}
