--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -38,7 +38,7 @@
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="{% url 'top20MostLiked' %}">Top 20 Most Liked videos</a>
         <a class="dropdown-item" href="{% url 'top20MostDisliked' %}">Top 20 Most Disliked videos</a>
-        <a class="dropdown-item" href="{% url 'avgPerCat' %}">Average Per Category(US)</a>
+        <a class="dropdown-item" href="{% url 'avgPerCat' %}">Average Per Category</a>
         <a class="dropdown-item" href="{% url 'disabledCommentsAndRatings' %}">Disabled Comments and Ratings</a>
         <a class="dropdown-item" href="{% url 'mostPopularCategory' %}">Most Popular Category Per Country</a>
         <a class="dropdown-item" href="{% url 'mostActiveComments' %}">Most Active Comments Sections</a>
