--- a/mysite/hackerman/templates/base.html
+++ b/mysite/hackerman/templates/base.html
@@ -15,16 +15,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
   </span>
     <ul class="navbar-nav">
-        <span style="font-size: 1em; color: #15FCEE; position: absolute; position: relative; top: 5px;  ">
-          <i class="fas fa-globe"></i></a>
-        </span>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'countries' %}" style="color: #F6F6F1">Countries</a>
+        <a class="nav-link" href="{% url 'countries' %}" style="color: #F6F6F1; position: relative; left: -10px;">Countries</a>
       </li>
       </li>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'modifyDataset' %}" style="color: #F6F6F1;">Modify Dataset</a>
+        <a class="nav-link" href="{% url 'modifyDataset' %}" style="color: #F6F6F1; position: relative; left: -10px;">Modify Dataset</a>
       </li>
       <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #271909; position:absolute;
@@ -52,7 +49,10 @@
         <span style="font-size: 25px; color: #0EFFED">
           <i class="fas fa-globe"></i>
         </span>Most Popular Category Per Country</a>
-        <a class="dropdown-item" href="{% url 'mostActiveComments' %}">Most Active Comments Sections</a>
+        <a class="dropdown-item" href="{% url 'mostActiveComments' %}">
+        <span style="font-size: 25px; color: #1C09FE">
+            <i class="fas fa-comments"></i>
+        </span>Most Active Comments Sections</a>
         <div class="clear"></div>
       </li>
     </div>
